# bachelor-thesis-research

./: .gitignore  EvaluateSP.py  GridCell_Experiments.ipynb  MNIST Classification.ipynb  README.md  RunExperiment.py  SP Evaluation.ipynb  Spatial Pooling Testing.ipynb  Spatial Pooling.ipynb  SpatialPooler.py  Untitled.ipynb  pyproject.toml  saccade_experiments.ipynb  util.py
algorithms/: Encoder.py  GridCells.py  SaccadeGenerator.py  SpatialPooler.py  TemporalPooler.py  __init__.py
data/: exp_results.csv
data/12-03-2022_19-21-30/: settings.json
data/12-03-2022_22-17-15/: settings.json
data/12-03-2022_22-30-27/: settings.json
data/12-03-2022_22-37-06/: settings.json
data/12-03-2022_22-45-40/: settings.json
data/12-03-2022_22-58-09/: settings.json
data/12-04-2022_15-51-52/: results.csv  settings.json
experiments/spatial_pooler/: settings.json
layers/: kWTA.py  test_kWTA.py
notebooks/: GridCell_Experiments.ipynb  MNIST Classification.ipynb  MNIST_kWinner.ipynb  SP Evaluation.ipynb  Spatial Pooling.ipynb  saccade_experiments.ipynb
tests/: test_spatial_oooler.py
util/: data.py  math.py  metrics.py  plots.py
