[tool.poetry]
name = "bachelor-thesis-research"
version = "0.1.0"
description = ""
authors = ["Moritz Eich <hey@moritz.dev>"]
readme = "README.md"
packages = [{include = "bachelor_thesis_research"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
tensorflow-datasets = "^4.6.0"
notebook = "^6.4.12"
grpcio = "^1.49.0"
tensorflow-macos = "^2.10.0"
tensorflow-metal = "^0.6.0"
protobuf = "3.19.4"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
nb-black = "^1.0.7"
isort = "^5.10.1"


[[tool.poetry.source]]
name = "conda"
url = "https://anaconda.org/anaconda/repo"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"